--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!-- <?php
   require __DIR__ . '/src/app.php';
 
-?> -->
+?>  -->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -68,7 +68,7 @@
           <img src="images/nexter.png" alt="" />
         </div>
         <div class="gallery__container">
-          <img src="images/candles.png" alt="" />
+          <img src="images/bgrace.png" alt="" />
         </div>
       </div>
     </section>
