--- a/index.html
+++ b/index.html
@@ -53,22 +53,22 @@
     <section class="gallery">
       <div class="gallery__wrapper">
         <div class="gallery__container">
-          <img src="images/natours.png" alt="" />
+          <img src="images/natours.png" alt="tourswebsite" />
         </div>
         <div class="gallery__container">
-          <img src="images/trillo.png" alt="" />
+          <img src="images/trillo.png" alt="travel website" />
         </div>
         <div class="gallery__container">
-          <img src="images/gymcrop.png" alt="" />
+          <img src="images/gym.png" alt="gym website" />
         </div>
         <div class="gallery__container">
-          <img src="images/omnifod.png" alt="" />
+          <img src="images/omnifod.png" alt="food order website" />
         </div>
         <div class="gallery__container">
-          <img src="images/nexter.png" alt="" />
+          <img src="images/nexter.png" alt="real estate website" />
         </div>
         <div class="gallery__container">
-          <img src="images/bgrace.png" alt="" />
+          <img src="images/bgrace.png" alt="e-commerce website" />
         </div>
       </div>
     </section>
