--- a/index.html
+++ b/index.html
@@ -111,17 +111,19 @@
           </a>
         </li>
         <li>
-          <a href="#" target="_BLANK"
+          <a
+            href="https://www.linkedin.com/in/gytis-kymantas-736a12152/"
+            target="_BLANK"
             >LinkedIn <ion-icon name="logo-linkedin"></ion-icon>
           </a>
         </li>
         <li>
-          <a href="#" target="_BLANK"
+          <a href="https://github.com/GytisKymantas" target="_BLANK"
             >Github <ion-icon name="logo-github"></ion-icon>
           </a>
         </li>
         <li>
-          <a href="#" target="_BLANK"
+          <a href="https://twitter.com" target="_BLANK"
             >Twitter <ion-icon name="logo-twitter"></ion-icon>
           </a>
         </li>
